[feature] added some user crud
